<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="5dip"
    android:layout_marginEnd="5dip"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    android:id="@+id/card_click"
    android:layout_marginTop="2dip"
    android:layout_marginBottom="2dip"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:id="@+id/layout_click"
        android:padding="5dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:gravity="center_vertical"
            android:text="@string/shanghai_restaurant_place"
            android:drawableStart="@drawable/ic_location_pin"
            android:drawablePadding="2dip"
            android:padding="2dip"
            android:textSize="17sp"
            android:textStyle="bold"
            android:id="@+id/txt_event_name"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="end"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:drawableStart="@drawable/ic_user"
                android:gravity="center_vertical"
                android:padding="2dip"
                android:id="@+id/txt_event_person_count"
                android:text="@string/_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_event_total_cost"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/_141_00"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>